# pmss

./: .gitignore  README.md
.github/workflows/: tests.yml
example/: example.py  lo.pmss
fixtures/: deadlines.pmss  deadlines.pmss.queries  i18n.pmss  i18n.pmss.queries  simple.pmss  simple.pmss.queries
javascript/: .gitignore  package-lock.json  package.json
javascript/src/: index.ts  node.ts  pmss.peggy  pmssLoader.ts  pmssParserAdapter.ts  queries.peggy  queriesParserAdapter.ts  resolve.ts  selectors.ts  testRunner.ts  types.ts
javascript/src/examples/: basic-usage.ts  interactive-repl.ts
javascript/src/scripts/: parse-pmss.ts
python/: pyproject.toml  run_tests.sh
python/pmss/: queries_parser.py  test_runner.py
