[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmss"
version = "0.0.3"
authors = [
  { name="Piotr Mitros", email="piotr@mitros.org" },
  { name="Bradley Erickson" },
]
description = "Cascading Python settings"
readme = { text = "See the project README on GitHub for full documentation.", content-type = "text/markdown" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ply",
    "pyyaml"
]

[project.urls]
Homepage = "https://github.com/OlxHub/pmss"
